# pyNameEntityRecognition

./: .env  .gitignore  FRD_compliance_report.md  README.md  TUTORIAL.md  USAGE_EXAMPLES.md  lcel_explained.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: vignette.md
pyNameEntityRecognition/: __init__.py  model.py  pipeline.py  schemas.py
py_name_entity_recognition/: catalog.py
py_name_entity_recognition/core/: engine.py
py_name_entity_recognition/data_handling/: chunking.py  io.py  merging.py
py_name_entity_recognition/models/: factory.py
py_name_entity_recognition/prompting/: prompt_manager.py
py_name_entity_recognition/schemas/: core_schemas.py
py_name_entity_recognition/utils/: biores_converter.py
pyner/: __init__.py  catalog.py
pyner/core/: engine.py
pyner/data_handling/: chunking.py  io.py  merging.py
pyner/models/: config.py  factory.py
pyner/observability/: logging.py  visualization.py
pyner/prompting/: prompt_manager.py
pyner/schemas/: core_schemas.py
pyner/utils/: biores_converter.py
tests/: conftest.py  test_catalog.py  test_smoke.py
tests/core/: test_engine.py  test_engine_agentic_robustness.py  test_engine_integration.py  test_engine_integration_extended.py  test_engine_robustness.py  test_engine_unit.py
tests/data_handling/: test_chunking.py  test_io.py  test_merging.py
tests/models/: test_model_factory.py
tests/observability/: test_visualization.py
tests/prompting/: test_prompt_manager.py
tests/utils/: test_biores_converter.py
