[tool.poetry]
name = "pyNameEntityRecognition"
version = "0.1.0"
description = "LLM-based Named Entity Recognition using LangChain and LangGraph"
authors = ["Gowtham Rao <rao@ohdsi.org>"]
license = "Apache-2.0"
packages = [
    { include = "pyner" }
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
langchain-community = "^0.0.38"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langgraph = "^0.0.20"
pydantic = "^2.5.0"
spacy = "^3.7.0"
loguru = "^0.7.0"
tenacity = "^8.2.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
pandas = "^2.0"
datasets = "^2.14.0"
Jinja2 = "^3.1.0"
# For model providers
openai = "^1.3.0"
anthropic = "^0.18.0"
google-generativeai = "^0.3.0"
ollama = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.6.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
